fix(test): :bug:add ignore-styles config to avoid error ocurr while using pcss

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
         ],
         "require": [
             "babel-register",
+            "ignore-styles",
             "./test/helpers/setup-browser-env.js"
         ],
         "concurrency": 5,
