--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "file-loader": "^0.11.1",
         "html-webpack-plugin": "^2.28.0",
         "i18n": "^0.8.3",
+        "ignore-styles": "^5.0.1",
         "ip": "^1.1.5",
         "js-cookie": "^2.1.4",
         "jsdom": "9.12",
